--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
-    "builds" : [{ "src" : "app.py", "use" : "@vercel/python" }],
-    "routes" : [{ "src" : "/(.*)", "dest" : "app.py" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python",
+      "config": {
+        "python": "3.8"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
+  ]
 }
